header profile error

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
   <script src="app.js"></script>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/8bc3f6a9fc.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   <link rel="apple-touch-icon" sizes="144x144" href="./favicons/apple-touch-icon.png" />
