--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Если ты видишь это сообщение, это значит что у тебя в браузере не включен JavaScript. Для работы сайта, включи его в браузере. Как это делать посмотри в интернете.</noscript>
   <div id="root"></div>
 </body>
 
